OpenRoberta/robertalab#836 commented all websocket related code, as we dont use it serverside